Fix navigation overflow and add back-to-top button.

--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,8 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
+
+
 .header {
     min-height: 100vh;
     width: 100%;
@@ -11,6 +13,7 @@
     background-size: cover;
     position: relative;
 }
+
 nav {
     display: flex;
     padding: 2% 6%;
@@ -37,7 +40,6 @@ nav {
         display: inline-block;
         padding: 8px 12px;
         position: relative;
-        color: #fff;
         text-decoration: none;
         font-size: 13px;
     }
@@ -47,13 +49,19 @@ nav {
         height: 2px;
         background: #ffd700;
         display: block;
-        margin: auto;
+        margin: 2px 0px;
         transition: 0.5s;
     }
     ul li:hover::after {
         width: 100%;
     }
+
+    a{
+        color: #fff;
+        text-decoration: none;
+    }
 }
+
 
 .text-box {
     width: 90%;
@@ -92,6 +100,9 @@ nav {
 @media (max-width: 700px) {
     .text-box h1 {
         font-size: 40px;
+    }
+    html,body{
+        overflow-x: hidden;
     }
     .nav-links {
         position: absolute;
@@ -340,7 +351,26 @@ ul {
 @media(max-width: 574px){
     .footer-col{
         width: 100%;
-        padding: 15px 15px;
+        margin-bottom: 15px;
     }
 }
 
+#btnscrolltotop{
+    display: none;
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #2e2829;
+    color: white;
+    outline: none;
+}
+#btnscrolltotop:hover{
+    background: #3b3233;
+}
+
+.fas{
+ font-size: 30px;
+}
